--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.8.0",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.1.7",
     "sass": "^1.58.0",
     "styled-components": "^5.3.6",
     "vite-plugin-svgr": "^2.4.0"
