--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.47.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.2",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
@@ -26,11 +28,12 @@
     "sass": "^1.58.0",
     "stripe": "^11.12.0",
     "styled-components": "^5.3.6",
+    "typescript": "^4.9.5",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
   }
