--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/redux-logger": "^3.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
   }
