--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^1.47.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
     "sass": "^1.58.0",
     "stripe": "^11.12.0",
     "styled-components": "^5.3.6",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.9.5",
     "vite-plugin-svgr": "^2.4.0"
   },
