--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^1.47.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
